# skeletons

./: README.md
cmake_strict_warnings_cli_lib_app/: CMakeLists.txt  Makefile
cmake_strict_warnings_cli_lib_app/cmake/modules/: warnings.cmake
cmake_strict_warnings_cli_lib_app/src/: CMakeLists.txt
cmake_strict_warnings_cli_lib_app/src/cli/: CMakeLists.txt  main.cxx
cmake_strict_warnings_cli_lib_app/src/lib/: CMakeLists.txt  test.cxx  test.hxx
cpp_simple_cmake/: CMakeLists.txt
cpp_simple_cmake/src/: main.cxx
cpp_simple_cmake_vcpkg/: .gitignore  CMakeLists.txt  vcpkg.json
cpp_single_unit/: Makefile
cpp_single_unit/src/: lib.hxx  main.cxx
csharp_cheat_sheet/: Program.cs  csharp_cheat_sheet.sln
mvn-kotlin-hello/: pom.xml
mvn-kotlin-hello/src/main/kotlin/: Skel.kt
mvn-kotlin-hello/src/test/kotlin/: TestSkel.kt
